@@ -83,13 +83,14 @@
                      <li><a class="small" href="#linkemailpublisher">LinkEmailPublisher</a>
                      <li><a class="small" href="#scppublisher">SCPPublisher</a>
                   </ul>
+               <li><a class="small" href="#dateformat">DateFormat</a>
+               <li><a class="small" href="#plugin">Plugin</a>
                <li><a class="small" href="#labelincrementers">LabelIncrementers</a>
                   <ul>
                      <li><a class="small" href="#defaultlabelincrementer">DefaultLabelIncrementer</a>
                      <li><a class="small" href="#cvslabelincrementer">CVSLabelIncrementer</a>
+                     <li><a class="small" href="#emptylabelincrementer">EmptyLabelIncrementer</a>
                   </ul>
-               <li><a class="small" href="#dateformat">DateFormat</a>
-               <li><a class="small" href="#plugin">Plugin</a>
             </ul>
          </ul>
 
